# FITS-Reader

./: CMakeLists.txt  README.md  fitsReader.cpp
include/: fits.hpp
src/: fits.cpp  main.cpp
